# TTX

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build_vs2019.bat  build_vs2019_win32.bat  build_vs2019_win32.cmd  build_vs2019_x64.bat  copy_base.cmd  install.cmd  plugin_build_v4.cmd  plugin_build_win32.cmd  plugins.cmake  plugins.txt  support_teraterm5.md
TTXAdditional/TTXDuration/: CMakeLists.txt  ttxduration.rc
TTXAdditional/TTXEnv/: CMakeLists.txt  ttxenv.c
TTXAdditional/TTXEstimateMismatch/: CMakeLists.txt
TTXAdditional/TTXPackage/: CMakeLists.txt  memo.md  ttxpackage.c
TTXAdditional/TTXPlugin/: CMakeLists.txt
TTXAdditional/TTXReconnect/: CMakeLists.txt  ttxreconnect.c
TTXAdditional/TTXReport/: CMakeLists.txt
TTXAdditional/TTXShortcut/: CMakeLists.txt  resource.h  ttxshortcut.c  ttxshortcut.rc
TTXAdditional/TTXUserKey/: CMakeLists.txt  resource.h
TTXAdditional/common/: stringlist.c
TTXDuration/: CMakeLists.txt  readme.md  ttxduration.c  ttxduration.rc
TTXEnv/: CMakeLists.txt  resource.h  ttxenv.c  ttxenv.rc
TTXEstimateMismatch/: CMakeLists.txt  readme.md  test_v4.c  test_v5.c  ttxestimatemismatch.c
TTXPackage/: CMakeLists.txt  memo.md  resource.h  ttxpackage.c  ttxpackage.rc
TTXPlugin/: CMakeLists.txt  pluginlistdlg.c  pluginlistdlg.h  readme.md  resource.h  ttx.txt  ttxplugin.c  ttxplugin.rc
TTXReconnect/: CMakeLists.txt  readme.md  ttxreconnect.c  ttxreconnect.rc
TTXReport/: CMakeLists.txt  readme.md  resource.h  ttxreport.c  ttxreport.rc
TTXSetView/: CMakeLists.txt  resource.h  ttxsetview.c  ttxsetview.rc
TTXShortcut/: CMakeLists.txt  readme.md  resource.h  ttxshortcut.c  ttxshortcut.rc
TTXTest_Exports/: CMakeLists.txt  resource.h  ttxtest_exports.c  ttxtest_exports.rc
TTXTest_TTTypes/: CMakeLists.txt  REAME.md  ttxtest_tttypes.c
TTXUserKey/: CMakeLists.txt  readme.md  resource.h  ttxuserkey.c  ttxuserkey.rc
common/: CMakeLists.txt  common.rc  infoview.c  infoview.h  readme.md  resource.h  stringlist.c  stringlist.h  ttxcmn_string.c  ttxcmn_string.h  ttxcmn_ui.c  ttxcmn_ui.h  ttxcmn_util.c  ttxcmn_util.h  ttxcommon.c  ttxcommon.h  ttxdebug.c  ttxdebug.h  ttxversion.c  ttxversion.h  ttxversion_db.h  verinfo.h.in
common/tttypes/: ana.ps1  dlsrc.ps1  gen.cmd  gen.ps1  getsrc.ps1  release.lst  release.ver  teraterm.h.ver  ttxplugin.ver
common/tttypes/base/: v2_3_teraterm.h  v2_3_tttypes.h
common/tttypes/source/: v4_100_tttypes.h  v4_102_tttypes.h  v4_103_teraterm.h  v4_103_tttypes.h  v4_104_teraterm.h  v4_104_tttypes.h  v4_105_teraterm.h  v4_105_tttypes.h  v4_106_tttypes.h  v4_63_tttypes.h  v4_64_tttypes.h  v4_65_tttypes.h  v4_66_tttypes.h  v4_67_tttypes.h  v4_68_tttypes.h  v4_69_tttypes.h  v4_70_tttypes.h  v4_72_tttypes.h  v4_73_tttypes.h  v4_74_tttypes.h  v4_77_tttypes.h  v4_78_tttypes.h  v4_79_tttypes.h  v4_80_tttypes.h  v4_82_tttypes.h  v4_83_tttypes.h  v4_85_tttypes.h  v4_86_tttypes.h  v4_89_teraterm.h  v4_89_tttypes.h  v4_90_teraterm.h  v4_90_tttypes.h  v4_91_tttypes.h  v4_92_tttypes.h  v4_93_tttypes.h  v4_94_tttypes.h  v4_95_teraterm.h  v4_95_tttypes.h  v4_96_teraterm.h  v4_96_tttypes.h  (+3 more)
doc/: history.md  interface.md  memo.md  purpose.md  support_teraterm5.md  unicode.md
doc/api/: ttsetパス名対応.md  ワイドキャラクタ対応.md  長いパス名対応.md
patch/: v4_ttplug.c.patch  v5_ttplug.c.patch
sample/: CMakeLists.txt  resource.h  ttxsample.c  ttxsample.rc
setup/: Setup.sln  Setup.vdproj.in  license.rtf
src/: build_vs2019.bat  build_vs2019_win32.bat  build_vs2019_x64.bat
src/TTXAdditional/: CMakeLists.txt
src/TTXAdditional/TTXDuration/: readme.md
src/TTXAdditional/TTXEstimateMismatch/: ttxestimatemismatch.c
src/TTXAdditional/TTXPackage/: CMakeLists.txt
src/TTXAdditional/TTXReport/: CMakeLists.txt
src/TTXAdditional/TTXUserKey/: ttxuserkey.rc
src/TTXEnv/: ttxenv.c  ttxenv.rc
src/TTXEstimateMismatch/: test_v5.c
src/TTXPackage/: ttxpackage.c
src/TTXReport/: ttxreport.c
src/TTXShortcut/: ttxshortcut.c
src/TTXUserKey/: readme.md  ttxuserkey.c
src/common/: stringlist.h  ttxcommon.c  ttxcommon.h
ttxtest/: CMakeLists.txt  resource.h  ttxtest.c  ttxtest.rc
